--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "mitt": "^2.1.0",
     "primeicons": "^4.1.0",
     "primevue": "^3.3.5",
+    "regenerator-runtime": "^0.13.7",
     "vue": "^3.0.0",
-    "vue-generate-component": "^3.0.1",
     "vue-router": "^4.0.6"
   },
   "devDependencies": {
