--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
+    "gsap": "^3.6.1",
     "mitt": "^2.1.0",
     "primeicons": "^4.1.0",
     "primevue": "^3.3.5",
     "regenerator-runtime": "^0.13.7",
+    "underscore": "^1.13.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.6"
   },
