--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "regenerator-runtime": "^0.13.7",
     "underscore": "^1.13.1",
     "vue": "^3.0.0",
+    "vue-loading-overlay": "^4.0.2",
     "vue-router": "^4.0.6"
   },
   "devDependencies": {
@@ -44,7 +45,7 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "babel-eslint"     
     },
     "rules": {
       "no-control-regex": 0,
